<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.santiagolizardo.visualtail</groupId>
	<artifactId>VisualTail</artifactId>
	<version>1.9.1</version>
	<packaging>jar</packaging>
	<name>VisualTail</name>
	<url>https://github.com/santiagolizardo/visualtail</url>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<artifactName>${project.name}</artifactName>
		<artifactVersion>${project.version}</artifactVersion>
		<artifactFilename>${project.build.finalName}-jar-with-dependencies.jar</artifactFilename>
		<artifactPath>${project.basedir}/target/${artifactFilename}</artifactPath>
	</properties>
	<developers>
		<developer>
			<name>Santiago Lizardo</name>
			<organization>Ponup</organization>
			<organizationUrl>https://ponup.com</organizationUrl>
		</developer>
	</developers>
	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
                                <version>1.6.0</version>
				<configuration>
					<mainClass>com.santiagolizardo.visualtail.Main</mainClass>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.googlecode.gettext-commons</groupId>
				<artifactId>gettext-maven-plugin</artifactId>
				<version>1.2.4</version>
				<executions>
					<execution>
						<id>convert-po-class</id>
						<phase>compile</phase>
						<goals>
							<goal>dist</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<poDirectory>${project.build.sourceDirectory}/../resources/com/santiagolizardo/visualtail/resources/languages</poDirectory>
					<targetBundle>com.santiagolizardo.visualtail.resources.languages.Translator</targetBundle>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<source>1.9</source>
					<target>1.9</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>com.santiagolizardo.visualtail.Main</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.3</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.izpack</groupId>
				<artifactId>izpack-maven-plugin</artifactId>
				<version>5.1.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>izpack</goal>
						</goals>
						<configuration>
							<installFile>${project.basedir}/src/launcher/install.xml</installFile>
							<baseDir>${project.basedir}/src/launcher</baseDir>
							<outputDirectory>./target</outputDirectory>
							<finalName>${project.build.finalName}-installer</finalName>
							<autoIncludeUrl>true</autoIncludeUrl>
							<autoIncludeDevelopers>true</autoIncludeDevelopers>
							<kind>standard</kind>
						</configuration>
					</execution>
				</executions>
			</plugin>			
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
<!--
				<includes>
					<include>build.properties</include>
				</includes>
				-->
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.googlecode.gettext-commons</groupId>
			<artifactId>gettext-commons</artifactId>
			<version>0.9.8</version>
		</dependency>
	</dependencies>
</project>
